# life

./: life.cabal
app/: Main.hs
src/: Life.hs
