name: life
version: 0.1.0

build-type: Simple
cabal-version: >= 1.10


library
  hs-source-dirs:
      src
  exposed-modules:
      Life
  build-depends:
      array
    , base >= 4.9 && < 4.10
    , containers
  default-language:
      Haskell2010
  ghc-options:
      -Wall


executable life
  hs-source-dirs:
      app
  main-is:
      Main.hs
  build-depends:
      base
    , life
  default-language:
      Haskell2010
  ghc-options:
      -Wall -threaded -rtsopts -with-rtsopts=-N
